# genai-task

./: README.md  config.ini  config.py  package-lock.json  pyproject.toml
app/: app.py  chatbot.py  intent_detection.py  intents.py  llm.py  page.html  sessionmng.py  streamlit.py  vectorstore.py
app/chroma_db/: chroma.sqlite3
app/chroma_db/795c8756-4483-4613-8ae4-2480869836c2/: index_metadata.pickle
app/chroma_db/838835d5-d891-4b55-97ca-242740b7846b/: index_metadata.pickle
app/frontend/: page.html  script.js  styles.css
app/react-frontend/src/: App.js  index.js
app/react-frontend/src/components/: BookCard.jsx  Loader.css  Loader.js  Loader.jsx
react-frontend/: package-lock.json
react-frontend/src/: App.css  App.js
react-frontend/src/components/: BookCard.js  Loader.css  Loader.js  SearchBar.js
